--- a/app/index.html
+++ b/app/index.html
@@ -6,9 +6,9 @@
     <title>Zimbie</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="lib/phaser.min.js"></script>
-    <script data-main="dist/main" src="lib/require.js"></script>
+    <script data-main="js/main" src="lib/require.js"></script>
 </head>
 <body>
-    
+
 </body>
 </html>
