--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Zimbie</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
     <script src="lib/phaser.min.js"></script>
     <script data-main="js/main" src="lib/require.js"></script>
 </head>
